@startuml
title Jerarquia de Excepciones
skinparam monochrome true

abstract class AnimeException {
  +getMessage(): String
}

class AnimeYaExistenteException {
  -titulo: String
  +getTitulo(): String
}

class AnimeNoEncontradoException {
  -titulo: String
}

class ValidacionException {
  -campo: String
}

class PersistenciaException {
  -cause: Throwable
}

class ListaNoEncontradaException {
  -nombre: String
}

AnimeException <|-- AnimeYaExistenteException
AnimeException <|-- AnimeNoEncontradoException
AnimeException <|-- ValidacionException
AnimeException <|-- PersistenciaException
AnimeException <|-- ListaNoEncontradaException
@enduml
